--- a/www/public/wp-content/themes/twentytwentytwo/templates/form-renderer.html
+++ b/www/public/wp-content/themes/twentytwentytwo/templates/form-renderer.html
@@ -1,3 +1,7 @@
 <?php /* Template Name: FormRenderer */ ?>
 
+<!-- wp:template-part {"slug":"header","tagName":"header"} /-->
+
 <div id="form-renderer-plugin"></div>
+
+<!-- wp:template-part {"slug":"footer","tagName":"footer"} /-->
